--- a/app/Presenters/templates/Javascript/default.latte
+++ b/app/Presenters/templates/Javascript/default.latte
@@ -9,8 +9,8 @@
     </nav>
 
     <div class="row text-center no-gutters">
-        <div class="col">Input</div>
-        <div class="col">Output</div>
+        <div class="col"><label for="input">Input</label></div>
+        <div class="col"><label for="output">Output</label></div>
         <div class="col">Preview (resizable)</div>
     </div>
     <div class="row border flex-grow-1 no-gutters mb-5">
