--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
-
-    <script src="{assets front.js}"  ></script>
+    <title>{ifset title}{include title|stripHtml} | {/ifset}NBSP</title>
+    <link rel="stylesheet" href="{assets front.css}">
+    <script src="{assets front.js}" async defer></script>
 </head>
 
 <body>
