--- a/client/front.scss
+++ b/client/front.scss
@@ -5,9 +5,9 @@
   src: local('Menlo'), url('fonts/Menlo-Regular.woff') format('woff');
 }
 $border-radius: 0;
-$body-bg: #2B2B2B;
+$body-bg: #282c34;
 $body-color:  #A9B7C6;
-$input-bg: #2B2B2B;
+$input-bg: #282c34;
 $input-color: #A9B7C6;
 
 @import "./bootstrap";
@@ -42,6 +42,30 @@ textarea{
   resize: none;
 }
 .CodeMirror {
-
   height: 100%;
+}
+[data-toggle]{
+  cursor: pointer;
+}
+[data-toggle]{
+  &:after{
+    font-size: .7em;
+    margin-left: .25rem;
+    vertical-align: middle;
+    display: inline-block;
+   // transform-origin: 50% 40%;
+    content: '\25b2';
+  }
+  &:not(:focus){
+    &:after{
+      transform: scale(1,-1);
+    }
+    + *{
+      display: none;
+    }
+  }
+}
+.dropdown{
+  position: absolute;
+  z-index: 999;
 }
